--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/styled-components": "^5.1.34",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
